Update changelog Fix for icons getting squished Patchnote update

--- a/client/styles/_icons.scss
+++ b/client/styles/_icons.scss
@@ -386,4 +386,5 @@ body.targetting-enemies, body.targetting-friendlies, body.targetting-item {
   width: 64px;
   height: 64px;
   pointer-events: none;
+  flex: 0 0 auto;
 }
